# bazalotow-rzeszowjasionka

./: CMakeLists.txt  README.md  database.cpp  database.h  gtest_database.cpp  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui
